# demo-uv-github-actions

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/demo_uv_github_actions/: converter.py
tests/: test_converter.py
