[project]
name = "demo-uv-github-actions"
version = "0.1.0"
description = "Example project for the GitHub Actions + uv tutorial"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_uv_github_actions"]
